--- a/device/overlay/packages/apps/Settings/res/values/dimens.xml
+++ b/device/overlay/packages/apps/Settings/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (c) 2014, The Linux Foundation. All rights reserved.
+<!-- Copyright (c) 2015, The Linux Foundation. All rights reserved.
 
      Redistribution and use in source and binary forms, with or without
      modification, are permitted (subject to the limitations in the
@@ -29,10 +29,8 @@
      OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
      IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-<!-- Telecomm app resources that may need to be customized
-     for different hardware or product builds. -->
+
 <resources>
-    <!-- Flag indicating if the tty is enabled -->
-    <bool name="tty_enabled">true</bool>
-    <!-- Flag indicating if the speed up audio on mt call code should be executed -->
+    <!-- Bluetooth Preferences -->
+    <integer name="bluetooth_name_length">248</integer>
 </resources>
